# example-android-bluetooth-gps

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/github/jw3/xbtgps/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/jw3/xbtgps/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/jw3/xbtgps/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mock-gps/: .gitignore  CMakeLists.txt  build.sh  conanfile.txt
mock-gps/firmware/: app.cpp  coords.h
